--- a/style.css
+++ b/style.css
@@ -4,32 +4,59 @@ h1 {
     font-family: 'Rye', cursive;
     background-color: rgba(255, 255, 0, 0.911);
     text-align: center;
-    position: absolute;
+    overflow: auto;
     }
 
-.gameBoard {
-    position: absolute;
-    width: 500px;
-    height: 500px;
-    background-color: grey;
-}
+    body {
+        margin: 40px;
+      }
 
-.player {
-    width: 120px;
-    height: 120px;
-    border-radius: 30%;
-    /*background-color: blanchedalmond;*/
-    position: absolute;
-    background-size: cover;
-    background-image: url(/Users/albertsalazar/beer-run/images/beer_drinker.jpeg);
-}
+    .box {
+        background-color: #444;
+        color: #fff;
+        border-radius: 5px;
+        padding: 20px;
+        font-size: 150%;
+      }
 
-.walls {
-    width: 120px;
-    height: 120px;
-    border-radius: 30%;
-    /*background-color: black;*/
-    position: absolute;
-    background-size: cover;
-    background-image: url(/Users/albertsalazar/beer-run/images/brickwall.png);
-}
+      .gameBoard {
+        position: absolute;
+        width: 500px;
+        height: 500px;
+        background-color: grey;
+    }
+    
+    .player {
+        width: 90px;
+        height: 90px;
+        border-radius: 30%;
+        /*background-color: blanchedalmond;*/
+        position: absolute;
+        background-size: cover;
+        background-image: url(/Users/albertsalazar/beer-run/images/beer_drinker.jpeg);
+    }
+    
+    .walls {
+        width: 100px;
+        height: 100px;
+        border-radius: 30%;
+        /*background-color: black;*/
+        position: absolute;
+        background-size: cover;
+        background-image: url(/Users/albertsalazar/beer-run/images/brickwall.png);
+    
+    }
+    
+    
+      
+      
+
+      
+      .wrapper {
+        width: 600px;
+        display: grid;
+        grid-gap: 10px;
+        grid-template-columns: repeat(6, 100px);
+        grid-template-rows: 100px 100px 100px;
+        grid-auto-flow: column;
+      }
