--- a/style.css
+++ b/style.css
@@ -47,7 +47,16 @@ h1 {
     
     }
     
+    .beers {
+        width: 100px;
+        height: 100px;
+        border-radius: 30%;
+        /*background-color: black;*/
+        position: absolute;
+        background-size: cover;
+        background-image: url(/Users/albertsalazar/beer-run/images/Beer_mug.svg.png);
     
+    }
       
       
 
