--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@
     background-color: rgba(255, 255, 0, 0.911);
     height: 15%;
     font-size: 75px;
-   
-}
+   }
+
+
 h1 {
     margin: 0; 
     background: yellow;
@@ -18,18 +19,12 @@ h1 {
     top: 50%;
     left: 50%;
     margin-right: -50%;
-   
-
-  
     }
 
+
 body {
-        /* margin: 40px; */
         background-image: url(/Users/albertsalazar/beer-run/images/cartoon-city4.jpeg);
-        background-repeat: no-repeat;
-        /* height: 100%;  */
-        
-        /* Center and scale the image nicely */         
+        background-repeat: no-repeat;       
         background-position: center center;
         background-size: cover;
         background-attachment: fixed;
@@ -39,39 +34,59 @@ body {
         margin: 0;
     }
 
-    nav {
+nav {
         background-color: rgb(147, 160, 161);
         color: #FFFFFF;
-        padding: 30px 40px;
+        padding: 30px 47px;
         display: inline-block;
         list-style-type: none;
-        /*margin: 0; 
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        margin-right: -50%; */
 }
+
 
 a {
     font-family: Raleway;
     color: #FFFFFF;
-    /*color:F15B31;*/
     letter-spacing: 1px;
     font-weight: 600;
     font-size: 18px;
     margin: 0px 20px;
     border-bottom: 2px solid transparent;
-
-}
-
-/* .directions{
-
 }
 
 
-.restart{
+h2 {
+        font-size: 50px;
+        color: black;
+        text-transform: uppercase;
+        font-weight: normal;
+        text-align: center;
+        background-color: lightgrey;
+        width: 35%;
+        padding: 25px;
+        margin-left: 31%;
+       }
 
-} */
+    
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+}
+
+
+p {
+    text-align: right;
+    font-family: Gaegu, cursive;
+    font-size: 20pt;
+    color: black;
+    background-color: rgb(143, 144, 146);
+    width: 35%;
+    padding: 25px;
+    margin-left: 31%;
+    margin-bottom: 50%;
+}
+
 
 .box {
           background-color: #444;
@@ -82,50 +97,38 @@ a {
         }
         
         
-        
-        
-        
-    .win-message { 
-                /* position: fixed;
-                   width: 1400px;
-                   top: 150px;
-                   background-color: rgba(255,255,255,0.75);
-                   font-family: 'Inconsolata', monospace; 
-                   text-align: center;
-                   font: white;
-                   font-weight: 700;
-                   font-size: 4rem;
-                   background-image: url(/Users/albertsalazar/beer-run/images/game-over.png); */
-                 
-               position: absolute;
-               width: 100%;
-               height: 800px;
-               background-image: url(/Users/albertsalazar/beer-run/images/game-over.png);
-               background-repeat: no-repeat;
-               background-size: 100% 65%;
-               left: 0;
-                top: 0;
-                right: 0;
-                bottom: 0;
+.win-message { 
+        position: absolute;
+        width: 100%;
+        height: 800px;
+        background-image: url(/Users/albertsalazar/beer-run/images/game-over.png);
+        background-repeat: no-repeat;
+        background-size: 100% 65%;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
                }
+
+
 .gameBoard {
             background: url(/Users/albertsalazar/beer-run/images/street.jpeg);
             background-repeat: no-repeat;
             position:relative;
             width: 1200px;
             height: 500px;
-            background-color: grey;
             position: absolute;
             left: 0;
             right: 0;
             margin: auto;
+            float: left;
         }
+
 
 .player {
         width: 90px;
         height: 90px;
         border-radius: 30%;
-        /*background-color: blanchedalmond;*/
         position: absolute;
         background-size: cover;
         background-image: url(/Users/albertsalazar/beer-run/images/beer_drinker.jpeg);
@@ -135,29 +138,26 @@ a {
         width: 100px;
         height: 100px;
         border-radius: 30%;
-        /*background-color: black;*/
         position: absolute;
         background-size: cover;
         background-image: url(/Users/albertsalazar/beer-run/images/brickwall.png);
-    
     }
+
     
 .beers {
         width: 100px;
         height: 100px;
         border-radius: 30%;
-        /*background-color: black;*/
         position: absolute;
         background-size: cover;
         background-image: url(/Users/albertsalazar/beer-run/images/Beer_mug.svg.png);
-    
     }
+
 
 .home {
         width: 100px;
         height: 100px;
         border-radius: 30%;
-        /* background-color: black; */
         position: absolute;
         background-size: cover;
         background-image:url(/Users/albertsalazar/beer-run/images/beer_home.jpeg);
@@ -171,11 +171,29 @@ a {
         margin-bottom: 1rem;
       }
       
-      /* .wrapper {
-        width: 600px;
-        display: grid;
-        grid-gap: 10px;
-        grid-template-columns: repeat(6, 100px);
-        grid-template-rows: 100px 100px 100px;
-        grid-auto-flow: column;
-      } */
+     
+  .collapsible {
+    background-color: #777 ;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+}
+
+
+.active, .collapsible:hover {
+    background-color: #555;
+} 
+
+
+ .content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+}
+
