--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1 {
 
 
 body {
-        background-image: url(/Users/albertsalazar/beer-run/images/cartoon-city4.jpeg);
+        background-image: url(images/cartoon-city4.jpeg);
         background-repeat: no-repeat;       
         background-position: center center;
         background-size: cover;
@@ -101,7 +101,7 @@ p {
         position: absolute;
         width: 100%;
         height: 800px;
-        background-image: url(/Users/albertsalazar/beer-run/images/game-over.png);
+        background-image: url(images/game-over.png);
         background-repeat: no-repeat;
         background-size: 100% 65%;
         left: 0;
@@ -112,7 +112,7 @@ p {
 
 
 .gameBoard {
-            background: url(/Users/albertsalazar/beer-run/images/street.jpeg);
+            background: url(images/street.jpeg);
             background-repeat: no-repeat;
             position:relative;
             width: 1200px;
@@ -131,7 +131,7 @@ p {
         border-radius: 30%;
         position: absolute;
         background-size: cover;
-        background-image: url(/Users/albertsalazar/beer-run/images/beer_drinker.jpeg);
+        background-image: url(images/beer_drinker.jpeg);
     }
     
 .walls {
@@ -140,7 +140,7 @@ p {
         border-radius: 30%;
         position: absolute;
         background-size: cover;
-        background-image: url(/Users/albertsalazar/beer-run/images/brickwall.png);
+        background-image: url(images/brickwall.png);
     }
 
     
@@ -150,7 +150,7 @@ p {
         border-radius: 30%;
         position: absolute;
         background-size: cover;
-        background-image: url(/Users/albertsalazar/beer-run/images/Beer_mug.svg.png);
+        background-image: url(images/Beer_mug.svg.png);
     }
 
 
@@ -160,7 +160,7 @@ p {
         border-radius: 30%;
         position: absolute;
         background-size: cover;
-        background-image:url(/Users/albertsalazar/beer-run/images/beer_home.jpeg);
+        background-image:url(images/beer_home.jpeg);
     }      
       
       
